# simple.flow

./: .clang-format  .gitignore  CMakeLists.txt  Executor.hpp  Graph.hpp  Graphviz.cpp  Node.hpp  README.md  ThreadPool.hpp  main.cpp
cmake/: Deps.cmake  Utils.cmake
include/: elementary_registry.h  graph.h  graph_node.h  graph_spec_view.h  graph_topology.h  graph_view.h  inout.h  inout_handler.h  inout_port.h  inoutput_handler.h  input_handler.h  input_source_context.h  input_source_context_default.h  input_source_manager.h  matrix_elementary_registry.h  node.h  package.h  packet.h  packet_context.h  packet_per_node_context.h  tensor.h
include/base/: collection.h  contract_coding.h  data_type.h  function_registry.h  matrix_function_registry.h  status.h  tagged_object.h
include/calculator/: calculator.h  calculator_context.h  calculator_contract.h  calculator_option.h  calculator_registry.h
include/core/: collection.h  function_registry.h  status.h
include/device/: device.h  device_registry.h  host.h  matrix_device_registry.h  stream.h
include/elementary/: elementary.h  elementary_context.h  elementary_contract.h  elementary_option.h
include/runtime/: executor.h  scheduler.h  scheduler_async.h  scheduler_async_order_preserving.h  scheduler_one_thread.h
include/spec/: graph_spec.h  graph_view_spec.h
include/specs/: graph_spec.h
include/stream/: input_stream_context.h  input_stream_context_default.h  input_stream_manager.h
samples/: CMakeLists.txt  sample_flow.cc  sample_pipeline.cc
scripts/: build_linux_x86.sh
src/: config.h.in  elementary_registry.cc  graph.cc  graph.cpp  graph_node.cc  graph_node.cpp  graph_spec_view.cc  graph_spec_view.cpp  graph_topology.cc  graph_view.cc  graph_view.cpp  inout.cpp  inout_handler.cc  inout_port.cc  inout_port.cpp  inoutput_handler.cc  input_source_context.cc  input_source_context_default.cc  input_source_context_default.cpp  input_source_context_default.h  input_source_manager.cc  input_source_manager.cpp  matrix_elementary_registry.cpp  node.cc  package.cc  package.cpp  packet.cc  packet.cpp  packet_context.cc  packet_context.cpp  packet_per_node_context.cc  packet_per_node_context.cpp  tensor.cc
src/base/: data_type.cc  function_registry.cc  matrix_function_registry.cc  status.cc  tagged_object.cc
src/calculator/: calculator.cc  calculator_context.cc  calculator_contract.cc  calculator_option.cc  calculator_registry.cc
src/core/: data_type.cc  function_registry.cc  status.cc  tagged_object.cc
src/device/: device.cc  device_registry.cc  matrix_device_registry.cc
src/elementary/: elementary.cc  elementary_context.cc  elementary_contract.cc  elementary_option.cc
src/runtime/: executor.cc  scheduler.cc  scheduler.cpp  scheduler_async.cc  scheduler_async.cpp  scheduler_async_order_preserving.cc  scheduler_async_order_preserving.cpp  scheduler_one_thread.cc  scheduler_one_thread.cpp  waiting_thread.cc  waiting_thread.cpp  waiting_thread.h
src/spec/: graph_spec.cc  graph_view_spec.cc
src/specs/: graph_spec.cc
src/stream/: input_stream_context.cc  input_stream_context_default.cc  input_stream_manager.cc
