INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/common)
FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")
FOREACH(FILE ${files})
      GET_FILENAME_COMPONENT(EXECUTABLE_NAME ${FILE} NAME_WE)
      ADD_EXECUTABLE(${EXECUTABLE_NAME} ${FILE})
      TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${SIMPLE_PIPE_LIBS})
ENDFOREACH(FILE ${SOURCE_FILES})